model criado e adicionado, paginação teste adicionada e funcionando e filtros adicionados (precisa de ajustes)

--- a/src/app/pokemon-data/pokemon-data.component.html
+++ b/src/app/pokemon-data/pokemon-data.component.html
@@ -1,14 +1,14 @@
 <div class="container">
   <div class="row">
-    <div class="col-12 bg-success" style="height: 50px;">
+    <div class="col-12 bg-success">
       <app-filters></app-filters>
     </div>
 
-    <div class="col-12 bg-danger" style="height: 650px;">
+    <div class="col-12 bg-danger">
       <app-pokemon-list></app-pokemon-list>
     </div>
 
-    <div class="col-12 bg-warning" style="height: 50px;">
+    <div class="col-12 bg-warning">
       <app-pagination></app-pagination>
     </div>
   </div>
