--- a/src/app/pokemon-data/pokemon-list/pokemon-item/pokemon-item.component.html
+++ b/src/app/pokemon-data/pokemon-list/pokemon-item/pokemon-item.component.html
@@ -1,12 +1,35 @@
-<div class="card">
-  <img class="card-img-top" src="https://vignette.wikia.nocookie.net/pokeone/images/7/77/Pikachu.png/revision/latest/scale-to-width-down/220?cb=20180916045441" alt="Imagem do Pokémon">
-  <div class="card-img-overlay text-right">
-      <a href="#" class="">Coração</a>
+<label for="pokemonName" class="col-form-label">Name:</label>
+<div>
+  <input type="text" class="form-control" id="pokemonName" [(ngModel)]="pokeName">
+</div>
+<label for="pokemonType" class="col-form-label">Type:</label>
+<div>
+  <input type="text" class="form-control" id="pokemonType" [(ngModel)]="pokeType">
+</div>
+
+<div class="row">
+  <div *ngFor="let pokemon of pokemons | filter: pokeName | paginate: { itemsPerPage: 4, currentPage: p, totalItems: 6}" class="col-3">
+    <div class="card" [ngStyle]="{'border': pokemon.isLegendary?'2px solid gold':'2px solid silver'}">
+      <img class="card-img-top img-responsive" src="{{pokemon.imagePath}}" alt="{{pokemon.pokeName}}">
+      <div class="card-img-overlay text-right">
+        <a href="#" class="">Coração</a>
+      </div>
+      <div class="card-body">
+        <h5 class="text-center card-title"><span>#{{pokemon.pokeNumber}}</span> {{pokemon.pokeName}}
+          ({{pokemon.regionName}})</h5>
+        <hr>
+        <div class="col-12 text-center">
+          <p class="col d-inline" *ngFor="let t of pokemon.type; index as i">{{pokemon.type[i]}}</p>
+        </div>
+        <hr>
+        <div class="col-12 text-center">
+          <p class="col d-inline" *ngIf="pokemon.evolution.length === 0; else evolList">No Evolutions</p>
+          <ng-template #evolList>
+            <p class="col d-inline" *ngFor="let e of pokemon.evolution; index as i">{{pokemon.evolution[i]}}</p>
+          </ng-template>
+        </div>
+      </div>
     </div>
-  <div class="card-body">
-    <h5 class="card-title"><span>#</span> Pokémon</h5>
-    <hr>
-    <p>Type 1</p>
-    <p>Type 2</p>
   </div>
 </div>
+<pagination-controls (pageChange)="p = $event"></pagination-controls>
