--- a/src/app/pokemon-data/pokemon-list/pokemon-list.component.html
+++ b/src/app/pokemon-data/pokemon-list/pokemon-list.component.html
@@ -1,14 +1,3 @@
-<div class="row">
-  <div class="col-3">
-    <app-pokemon-item></app-pokemon-item>
-  </div>
-  <div class="col-3">
-    <app-pokemon-item></app-pokemon-item>
-  </div>
-  <div class="col-3">
-    <app-pokemon-item></app-pokemon-item>
-  </div>
-  <div class="col-3">
-    <app-pokemon-item></app-pokemon-item>
-  </div>
-</div>
+<!-- <div class="row"> -->
+  <app-pokemon-item></app-pokemon-item>
+<!-- </div> -->
