--- a/src/app/app-controller/app-controller.component.html
+++ b/src/app/app-controller/app-controller.component.html
@@ -1,8 +1,7 @@
 <div class="container">
-  <button class="btn btn-info btn-block">Table</button>
-  <button class="btn btn-success btn-block">Add</button>
-  <button class="btn btn-warning btn-block">Edit</button>
-  <button class="btn btn-primary btn-block">Save</button>
-  <button class="btn btn-danger btn-block">Delete</button>
+  <!-- botoes pro componente de informaçoes -->
+  <button class="btn btn-warning">Edit</button>
+  <button class="btn btn-danger">Delete</button>
+  <button class="btn btn-info">Close</button>
 </div>
 
