ajustes nas tela principal e form, criação da tela de informação

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,18 @@
 <app-header></app-header>
-<div class="container-fluid">
+<div class="container">
     <div class="row">
-        <div class="col-10">
+        <div class="col">
             <app-pokemon-data></app-pokemon-data>
         </div>
-        <div class="col-2">
-            <app-controller></app-controller>
+    </div>
+    <div class="row">
+        <div class="col">
+            <app-pokemon-form></app-pokemon-form>
         </div>
     </div>
-    <app-pokemon-form></app-pokemon-form>
+    <div class="row">
+        <div class="col">
+            <app-pokemon-info></app-pokemon-info>
+        </div>
+    </div>
 </div>
