--- a/src/app/pokemon-data/filters/filters.component.html
+++ b/src/app/pokemon-data/filters/filters.component.html
@@ -1,19 +1,19 @@
 <form>
   <div class="form-group row">
-    <label for="pokemonNumber" class="col-form-label">Number:</label>
-    <div>
+    <div class="col-2">
+      <label for="pokemonNumber" class="col-form-label">Number:</label>
       <input type="text" class="form-control" id="pokemonNumber">
     </div>
-    <label for="pokemonName" class="col-form-label">Name:</label>
-    <div>
+    <div class="col-4">
+      <label for="pokemonName" class="col-form-label">Name:</label>
       <input type="text" class="form-control" id="pokemonName">
     </div>
-    <label for="pokemonType" class="col-form-label">Type:</label>
-    <div>
+    <div class="col-3">
+      <label for="pokemonType" class="col-form-label">Type:</label>
       <input type="text" class="form-control" id="pokemonType">
     </div>
-    <label for="pokemonRegion" class="col-form-label">Region:</label>
-    <div>
+    <div class="col-3">
+      <label for="pokemonRegion" class="col-form-label">Region:</label>
       <input type="text" class="form-control" id="pokemonRegion">
     </div>
   </div>
