--- a/src/app/pokemon-form/pokemon-form.component.html
+++ b/src/app/pokemon-form/pokemon-form.component.html
@@ -1,17 +1,17 @@
-<h3>FORM</h3>
+<h3 class="text-center">FORM</h3>
 <form>
   <div class="form-row">
     <div class="col">
       <div class="form-row">
-        <div class="form-group col">
+        <div class="form-group col-2">
           <label for="pokeNumber">Number</label>
           <input type="number" class="form-control" id="pokeNumber" required>
         </div>
-        <div class="form-group col">
+        <div class="form-group col-5">
           <label for="pokeName">Name</label>
           <input type="text" class="form-control" id="pokeName" required>
         </div>
-        <div class="form-group col">
+        <div class="form-group col-5">
           <label for="regionName">Region</label>
           <input type="text" class="form-control" id="regionName" required>
         </div>
@@ -50,49 +50,69 @@
             </div>
           </div>
         </div>
+        <div class="form-group">
+          <label for="pokePreevolutions">Pre Evolution(s)</label>
+          <div class="form-row">
+            <div class="col-3">
+              <input type="number" class="form-control" id="pokePreevolutions" placeholder="Number">
+            </div>
+            <div class="col-7">
+              <input type="text" class="form-control" id="pokePreevolutions" placeholder="Name">
+            </div>
+            <div class="pl-5 col-2">
+              <button class="btn btn-primary">Add</button>
+            </div>
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="pokeEvolutions">Evolution(s)</label>
+          <div class="form-row">
+            <div class="col-3">
+              <input type="number" class="form-control" id="pokeEvolutions" placeholder="Number">
+            </div>
+            <div class="col-7">
+              <input type="text" class="form-control" id="pokeEvolutions" placeholder="Name">
+            </div>
+            <div class="pl-5 col-2">
+              <button class="btn btn-primary">Add</button>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
-    <div class="col">
-      <img style="max-height: 200px" src="https://upload.wikimedia.org/wikipedia/commons/8/8e/RiverIcon2-Empty.svg"
-        alt="Pokémon">
-      <div class="form-group">
-        <label for="pokePreevolutions">Pre Evolution(s)</label>
-        <div class="row">
-          <div class="col">
-            <input type="number" class="form-control" id="pokePreevolutions" placeholder="Pre Evolution Number">
-          </div>
-          <div class="col">
-            <input type="text" class="form-control" id="pokePreevolutions" placeholder="Pre Evolution Name">
-          </div>
-          <div class="col">
-            <button class="btn btn-primary">Add</button>
-          </div>
+    <div class="ml col">
+      <div class="form-row">
+        <div class="text-center col">
+          <h3><span>###</span> Pokémon</h3>
+          <img class="text-center" style="max-height: 300px"
+            src="https://upload.wikimedia.org/wikipedia/commons/8/8e/RiverIcon2-Empty.svg" alt="Pokémon">
         </div>
-        <label for="pokeEvolutions">Evolution(s)</label>
-        <div class="row">
-          <div class="col">
-            <input type="number" class="form-control" id="pokeEvolutions" placeholder="Evolution Number">
-          </div>
-          <div class="col">
-            <input type="text" class="form-control" id="pokeEvolutions" placeholder="Evolution Name">
-          </div>
-          <div class="col">
-            <button class="btn btn-primary">Add</button>
-          </div>
+      </div>
+      <div class="form-row">
+        <div class="col">
+          <label>Evolutions</label>
+          <ul class="list-group">
+            <li class="list-group-item">
+              <div class="form-row">
+                <div class="col-10">
+                  <p class="pt-xl-2 mb-0"><span>###</span> - Pre Evolução</p>
+                </div>
+                <div class="col-2">
+                  <button class="btn btn-danger">Delete</button>
+                </div>
+              </div>
+            </li>
+            <li class="list-group-item"># - Pokémon sendo cadastrado</li>
+            <li class="list-group-item"># - Evolução</li>
+          </ul>
         </div>
-        <ul class="list-group">
-          <li class="list-group-item"># - préevolução</li>
-          <li class="list-group-item"># - Meu pokémon</li>
-          <li class="list-group-item"># - Evolução</li>
-        </ul>
       </div>
     </div>
   </div>
-  <div class="form-row">
-    <div class="col">
-      <button class="btn btn-success">Add</button>
-      <button class="btn btn-warning">Edit</button>
-      <button class="btn btn-info">Cancelar</button>
+  <div class="form-row mt-3">
+    <div class="col text-center">
+      <button class="btn btn-success mr-1">Register</button>
+      <button class="btn btn-info ml-1">Cancel</button>
     </div>
   </div>
 </form>
