--- a/src/app/pokemon-info/pokemon-info.component.html
+++ b/src/app/pokemon-info/pokemon-info.component.html
@@ -16,9 +16,9 @@
     <h4>No evolutions</h4>
     <div class="row mt-3">
       <div class="col">
-        <button class="btn btn-warning">Edit</button>
-        <button class="btn btn-danger ml-3 mr-3">Delete</button>
-        <button class="btn btn-info">Back</button>
+        <button class="btn btn-warning" (click)="toComponent('pokemon-form')">Edit</button>
+        <button class="btn btn-danger ml-3 mr-3" (click)="toComponent('pokemon-data')">Delete</button>
+        <button class="btn btn-info" (click)="toComponent('pokemon-data')">Back</button>
       </div>
     </div>
   </div>
