Conexão com o servidor, get de Pokemons e Pokemon funcionando, inumeros códigos comentados, ver uma forma de usar o json e de continuar utilizando o modelo criado no angular

--- a/src/app/pokemon-data/pokemon-data.component.html
+++ b/src/app/pokemon-data/pokemon-data.component.html
@@ -1,16 +1,15 @@
 <div class="row">
-  <div class="col-12">
+  <!-- <div class="col-12">
     <app-filters></app-filters>
-  </div>
+  </div> -->
   <div class="col-12">
     <div class="row">
       <div class="col-3" *ngFor="let pokemonItem of pokemons">
         <app-pokemon-item (pokemonCpnt)="toComponent($event)" [pokemon]="pokemonItem"></app-pokemon-item>
-        <h1 *ngIf="expression">Oi</h1>
       </div>
     </div>
   </div>
-  <div class="col-12">
+  <!-- <div class="col-12">
     <app-pagination></app-pagination>
-  </div>
+  </div> -->
 </div>
