--- a/src/app/pokemon-info/pokemon-info.component.html
+++ b/src/app/pokemon-info/pokemon-info.component.html
@@ -1,5 +1,32 @@
 <div class="row text-center">
   <div class="col">
+    <h1><span>#{{pokemon.number}}</span> {{pokemon.name}}</h1>
+    <img src="{{pokemon.imageURL}}" alt="{{pokemon.name}}">
+    <h2>{{pokemon.regionName}} Region</h2>
+    <h3 *ngIf="pokemon.isLegendary">Legendary</h3>
+    <div class="row">
+      <div class="col" *ngFor="let t of pokemon.type">
+        <h3>{{t}}</h3>
+      </div>
+    </div>
+    <hr>
+    <h4 *ngIf="pokemon.evolution.length === 0">No evolutions</h4>
+    <div>
+      <h3 class="col d-inline" *ngFor="let e of pokemon.evolution">
+        {{e.number}} - {{e.name}}
+      </h3>
+    </div>
+    <div class="row mt-3">
+      <div class="col">
+        <button class="btn btn-warning" (click)="toComponent('pokemon-form')">Edit</button>
+        <button class="btn btn-danger ml-3 mr-3" (click)="toComponent('pokemon-data')">Delete</button>
+        <button class="btn btn-info" (click)="toComponent('pokemon-data')">Back</button>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- <div class="row text-center">
+  <div class="col">
     <h1><span>#494</span> Victini</h1>
     <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/494.png" alt="Victini">
     <h2>Sinnoh Region</h2>
@@ -22,4 +49,4 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
