Adição de rotas com parametros e modo do formulario, adição de comentarios para futuros trabalhos (ver principalmente, formulario), formulario carrega como deve de acordo com o modo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,8 @@
-<app-header (pokemonComponent)="manageComponent($event)"></app-header>
+<app-header></app-header>
 <div class="container">
     <div class="row">
         <div class="col">
-            <app-pokemon-data (pokemonComponent)="manageComponent($event)" *ngIf="component === 'pokemon-data'"></app-pokemon-data>
-            <app-pokemon-form (pokemonComponent)="manageComponent($event)" *ngIf="component === 'pokemon-form'"></app-pokemon-form>
-            <app-pokemon-info (pokemonComponent)="manageComponent($event)" *ngIf="component === 'pokemon-info'"></app-pokemon-info>
+            <router-outlet></router-outlet>
         </div>
     </div>
 </div>
