--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
 <nav class="navbar navbar-dark bg-primary">
   <img style="max-height: 40px;" class="img-fluid" src="https://upload.wikimedia.org/wikipedia/commons/9/98/International_Pok%C3%A9mon_logo.svg" alt="pokemon-app">
-  <button class="btn btn-success my-2 my-sm-0" (click)="toComponent('pokemon-form')">Register</button>
+  <a class="btn btn-success my-2 my-sm-0" routerLink="pokemon/admin">Register</a>
 </nav>
