--- a/src/app/pokemon-data/pokemon-data.component.html
+++ b/src/app/pokemon-data/pokemon-data.component.html
@@ -5,7 +5,7 @@
   <div class="col-12">
     <div class="row">
       <div class="col-3" *ngFor="let pokemonItem of pokemons">
-        <app-pokemon-item (pokemonCpnt)="toComponent($event)" [pokemon]="pokemonItem"></app-pokemon-item>
+        <app-pokemon-item [pokemon]="pokemonItem"></app-pokemon-item>
       </div>
     </div>
   </div>
